@@ -1,3 +1,9 @@
+Jun 16, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
+
+ * libpcsxcore/psxcommon.c: Do not allow hotkeys inside a softcall from HLE
+   BIOS.
+ * configure.ac: Removed -fno-dse, which is no longer necessary.
+
 Jun 9, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * win32/pcsx.rc: Embed manifest properly under MSVC6.
